@@ -46,6 +46,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Date
 import|;
 end_import
@@ -479,6 +489,18 @@ name|getValues
 parameter_list|()
 block|{
 return|return
+name|_values
+operator|==
+literal|null
+condition|?
+name|Collections
+operator|.
+expr|<
+name|Count
+operator|>
+name|emptyList
+argument_list|()
+else|:
 name|_values
 return|;
 block|}
